kuber/1.5/back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:
      - name: backend
        image: wbitt/network-multitool
        ports: 
        - containerPort: 80
