kuber/1.5/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: backend
      port: 9002
      targetPort: 80
