kuber/1.5/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: frontend
      port: 9001
      targetPort: 80
