kuber/1.5/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: localhost
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
      - path: /api
        pathType: Exact
        backend:
          service:
            name: backend-service 
            port: 
              number: 80
